--- a/templates/aboutus/founders.html
+++ b/templates/aboutus/founders.html
@@ -1,11 +1,133 @@
 {% extends "layouts/base.html" %}
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
+{% block head %}
+    <head>
+        <meta charset="UTF-8">
+        <title>Project ELIMIN8|Founders</title>
+<style>
+    h1 {
+        display: flex;
+        justify-content: center;
+        color: #000000;
+    }
+    body {
+        font-family: Arial, Helvetica, sans-serif;
+    }
+
+    .flip-card {
+        background-color: transparent;
+        width: 300px;
+        height: 300px;
+        perspective: 1000px;
+    }
+
+    .flip-card-inner {
+        position: relative;
+        width: 100%;
+        height: 100%;
+        text-align: center;
+        transition: transform 0.6s;
+        transform-style: preserve-3d;
+        box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    }
+
+    .flip-card:hover .flip-card-inner {
+        transform: rotateY(180deg);
+    }
+
+    .flip-card-front, .flip-card-back {
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        -webkit-backface-visibility: hidden;
+        backface-visibility: hidden;
+    }
+
+    .flip-card-front {
+        background-color: #bbb;
+        color: black;
+    }
+
+    .flip-card-back {
+        background-color: #FFFFFF;
+        color: #000000;
+        transform: rotateY(180deg);
+    }
+    container {
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: space-evenly;
+        align-items: center;
+        align-content: center;
+    }
+    container1 {
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: center;
+        align-items: center;
+        align-content: center;
+    }
+    }
+</style>
+    </head>
+{% endblock %}
+{% block body %}
 <body>
-alexison junseo
+<br>
+<h1>Our Founders</h1>
+<br><br><br><br>
+<container>
+<div class="flip-card">
+    <div class="flip-card-inner">
+        <div class="flip-card-front">
+            <img src="static/assets/fixedjuncaption.PNG" alt="Avatar" style="width:300px;height:300px">
+        </div>
+        <div class="flip-card-back">
+            <p>For anything:</p>
+            <p>858-750-5117</p>
+            <p>junlim954@gmail.com</p>
+            <hr>
+            <p>"I envision Project ELIMIN8 as a way for us to use the tools that we have at our disposal to reduce wastage and starvation in areas in our community that cannot afford to support themselves at times."</p>
+        </div>
+    </div>
+</div>
+    <div class="flip-card">
+        <div class="flip-card-inner">
+            <div class="flip-card-front">
+                <img src="static/assets/fixedalexcaption.PNG" alt="Avatar" style="width:300px;height:300px">
+            </div>
+            <div class="flip-card-back">
+                <p>For anything:</p>
+                <p>858-750-5117</p>
+                <p>junlim954@gmail.com</p>
+                <hr>
+                <p>"I have no vision"</p>
+            </div>
+        </div>
+    </div>
+</container>
+<br><br><br><br>
+<container1>
+    <div class="flip-card">
+        <div class="flip-card-inner">
+            <div class="flip-card-front">
+                <img src="static/assets/captionjustin.PNG" alt="Avatar" style="width:300px;height:300px;">
+            </div>
+            <div class="flip-card-back">
+                <p>For anything:</p>
+                <p>858</p>
+                <p>awesomejustin04@gmail.com</p>
+                <hr>
+                <p>"I envision Project ELIMN8 to be a project that turns not only our community, but may other communiites into places where the problem of starvation exists only in the past."</p>
+            </div>
+        </div>
+    </div>
+</container1>
+<br><br><br><br>
 </body>
+{% endblock %}
+
 </html>
